sumo/tests/traci/ChangeRoute/InvalidNodeId/errors.traci
Error: Answered with error to command 48: Can not retrieve node with ID 1
Error while receiving command: tcpip::Socket::receive() @ recv: No error
Error while sending command: send failed: Software caused tcpip::Socket abort
